--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -2,8 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ohmyfood</title>
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="monprojet3bis/style.css">
         <script src="https://kit.fontawesome.com/8e5ac735b3.js" crossorigin="anonymous"></script>
         <!-- logo et titre : police Shrikhand
             autre texte : police Roboto-->
@@ -15,7 +16,7 @@
     </head>
 
     <body>
-        <header>
+        <header class="restoheader">
             <!-- page d'accueil : gros logo
                 Autre page : ajouter une flèche pour retourner en arrière-->
             <a class="back" href="index.html"><i class="fas fa-arrow-left"></i></a>
@@ -29,19 +30,19 @@
         <main class="plats">
             <!--Entrées plats desserts avec animations-->
             <h3><em>ENTR</em>ÉES</h3>
-            <div class="contentbox menu first"><p><strong>Tartare de poulpe acidulé</strong></p><p>Aux zests d'orange</p><p class="price">25€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Velouté de légumes d'antan</strong></p><p>Carotte, panais, topinambour</p><p class="price">35€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Soupe à l'oignon</strong></p><p>Revisitée</p><p class="price">20€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Tartare de poulpe acidulé</strong></p><p>Aux zests d'orange</p><p class="price">25€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Velouté de légumes d'antan</strong></p><p>Carotte, panais, topinambour</p><p class="price">35€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Soupe à l'oignon</strong></p><p>Revisitée</p><p class="price">20€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
             
             <h3><em>PLAT</em>S</h3>
-            <div class="contentbox menu first"><p><strong>Coquilles Saint-Jacques</strong></p><p>Accompagnées d'une purée de panais</p><p class="price">40€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Magret de canard</strong></p><p>Et parmentier de pommes de terre</p><p class="price">35€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Pigeonneau d'Ille-et-Vilaine</strong></p><p>Sur son lit de gnocchis aux légumes</p><p class="price">44€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Coquilles Saint-Jacques</strong></p><p>Accompagnées d'une purée de panais</p><p class="price">40€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Magret de canard</strong></p><p>Et parmentier de pommes de terre</p><p class="price">35€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Pigeonneau d'Ille-et-Vilaine</strong></p><p>Sur son lit de gnocchis aux légumes</p><p class="price">44€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
             
             <h3><em>DESS</em>ERTS</h3>
-            <div class="contentbox menu first"><p><strong>Pétales de violettes glacés</strong></p><p>Et purée de noisettes</p><p class="price">18€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Fondant au chocolat</strong></p><p>Revisité</p><p class="price">22€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Millefeuille croustillant</strong></p><p>Myrtilles et pâte d'amande</p><p class="price">23€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Pétales de violettes glacés</strong></p><p>Et purée de noisettes</p><p class="price">18€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Fondant au chocolat</strong></p><p>Revisité</p><p class="price">22€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Millefeuille croustillant</strong></p><p>Myrtilles et pâte d'amande</p><p class="price">23€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <!--le bouton 'commander'-->
             <button class="button" type="button">Commander</button>
