--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -2,8 +2,9 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ohmyfood</title>
-        <link type="text/css" rel="stylesheet" href="style.css">
+        <link type="text/css" rel="stylesheet" href="monprojet3bis/style.css">
         <script src="https://kit.fontawesome.com/8e5ac735b3.js" crossorigin="anonymous"></script>
         <!-- logo et titre : police Shrikhand
             autre texte : police Roboto-->
@@ -26,23 +27,23 @@
             <!--Figure du resto avec le nom-->
             <figure class="photoresto verticale"><img src="IMG/lanoteenchantée.jpg" alt=""><figcaption class="name">La note enchantée<i class="far fa-heart"></i></figcaption></figure>
         
-        <main>
+        <main class="plats">
             <!--Entrées plats desserts avec animations-->
             <h3><em>ENTR</em>ÉES</h3>
-            <div class="contentbox menu first"><p><strong>Ravioles de foie gras</strong></p><p>Accompagnés de leur crème à la truffe</p><p class="price">25€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Caviar osciètre</strong></p><p>Sur blini à la farine de blé noir</p><p class="price">35€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Homard et espuma de potiron</strong></p><p>Marinés aux zestes d'orange</p><p class="price">20€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu fourth"><p><strong>Foie gras de canard cuit entier</strong></p><p>Confiture de figues et pain toasté</p><p class="price">35€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Ravioles de foie gras</strong></p><p>Accompagnés de leur crème à la truffe</p><p class="price">25€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Caviar osciètre</strong></p><p>Sur blini à la farine de blé noir</p><p class="price">35€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Homard et espuma de potiron</strong></p><p>Marinés aux zestes d'orange</p><p class="price">20€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu fourth"><p><strong>Foie gras de canard cuit entier</strong></p><p>Confiture de figues et pain toasté</p><p class="price">35€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <h3><em>PLAT</em>S</h3>
-            <div class="contentbox menu first"><p><strong>Noix de coquilles Saint-Jacques</strong></p><p>Sur lit de purée de céleri-rave</p><p class="price">40€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Langoustine poêlée</strong></p><p>Purée de patate douce</p><p class="price">35€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Mijoté de queue de boeuf</strong></p><p>Et riz sauvage aux zestes de citron</p><p class="price">44€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Noix de coquilles Saint-Jacques</strong></p><p>Sur lit de purée de céleri-rave</p><p class="price">40€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Langoustine poêlée</strong></p><p>Purée de patate douce</p><p class="price">35€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Mijoté de queue de boeuf</strong></p><p>Et riz sauvage aux zestes de citron</p><p class="price">44€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
             
             <h3><em>DESS</em>ERTS</h3>
-            <div class="contentbox menu first"><p><strong>Macaron noisette et chocolat</strong></p><p>Glace au caramel brun et sel de Guérande</p><p class="price">18€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu second"><p><strong>Baba au rhum revisité</strong></p><p>Avec son coulis de citron</p><p class="price">22€</p><i class="fas fa-check-circle check"></i></div>
-            <div class="contentbox menu third"><p><strong>Tarte au citron meringuée</strong></p><p>Déstructurée</p><p class="price">23€</p><i class="fas fa-check-circle check"></i></div>
+            <div class="contentbox menu first"><p><strong>Macaron noisette et chocolat</strong></p><p>Glace au caramel brun et sel de Guérande</p><p class="price">18€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu second"><p><strong>Baba au rhum revisité</strong></p><p>Avec son coulis de citron</p><p class="price">22€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
+            <div class="contentbox menu third"><p><strong>Tarte au citron meringuée</strong></p><p>Déstructurée</p><p class="price">23€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <!--le bouton 'commander'-->
             <button class="button" type="button">Commander</button>
