modification des html, mise à jour du css

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ohmyfood</title>
-        <link type="text/css" rel="stylesheet" href="monprojet3bis/style.css">
+        <link type="text/css" rel="stylesheet" href="style.css">
         
         <script src="https://kit.fontawesome.com/8e5ac735b3.js" crossorigin="anonymous"></script>
         <!-- logo et titre : police Shrikhand
@@ -17,6 +17,8 @@
     </head>
 
     <body>
+
+        <div class="loader"><span class="spinner">Ohmyfood</span></div>
         <header class="header">
             <!-- page d'accueil : gros logo
                 Autre page : ajouter une flèche pour retourner en arrière-->
@@ -53,7 +55,7 @@
             <div class="platsindex">
                 <h2 id="restaurants">Restaurant</h2>
                 <!-- ajouter 4 figures avec photos, nom resto, logo coeur, et logo 'nouveau' sur les 2 premiers-->
-                <a class="photoindex"><figure class="photo_index"><img src="IMG/lapalettedugoût.jpg" alt=""><figcaption class="name_index"><strong>La palette du goût</strong><br>Ménilmontant<i class="far fa-heart"><span></span></i></figcaption></figure><p class="new">Nouveau</p></a>
+                <a class="photoindex"><figure class="photo_index"><img src="IMG/lapalettedugoût.jpg" alt=""><figcaption class="name_index"><strong>La palette du goût</strong><br>Ménilmontant<i class="far fa-heart"><span class="heart"></span></i></figcaption></figure><p class="new">Nouveau</p></a>
                 <a class="photoindex"><figure class="photo_index verticale"><img src="IMG/lanoteenchantée.jpg" alt=""><figcaption class="name_index"><strong>La note enchantée</strong><br>Charonne<i class="far fa-heart"></i></figcaption></figure><p class="new">Nouveau</p></a>
                 <a class="photoindex"><figure class="photo_index"><img src="IMG/alafrançaise.jpg" alt=""><figcaption class="name_index"><strong>À la française</strong><br>Cité Rouge<i class="far fa-heart"></i></figcaption></figure></a>
                 <a class="photoindex"><figure class="photo_index"><img src="IMG/ledélicedessens.jpg" alt=""><figcaption class="name_index"><strong>Le délice des sens</strong><br>Folie-Méricourt<i class="far fa-heart"></i></figcaption></figure></a>
