mise a jour html et css: fin de mise en page et responsive

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -25,7 +25,7 @@
             
         </header>
             <!--Figure du resto avec le nom-->
-            <figure class="photoresto"><img src="IMG/alafrançaise.jpg" alt=""><figcaption class="name">À la française<button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
+            <figure class="photoresto"><img src="IMG/alafrançaise.jpg" alt=""><figcaption class="name"><p>À la française</p><button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
         
         <main class="plats">
             <!--Entrées plats desserts avec animations-->
