--- a/lanoteenchantee.html
+++ b/lanoteenchantee.html
@@ -25,7 +25,7 @@
             
         </header>
             <!--Figure du resto avec le nom-->
-            <figure class="photoresto verticale"><img src="IMG/lanoteenchantée.jpg" alt=""><figcaption class="name">La note enchantée<button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
+            <figure class="photoresto verticale"><img src="IMG/lanoteenchantée.jpg" alt=""><figcaption class="name"><p>La note enchantée</p><button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
         
         <main class="plats">
             <!--Entrées plats desserts avec animations-->
