--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -25,7 +25,7 @@
             
         </header>
             <!--Figure du resto avec le nom-->
-            <figure class="photoresto"> <img src="IMG/lapalettedugoût.jpg" alt=""><figcaption class="name">La palette du goût<button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
+            <figure class="photoresto"> <img src="IMG/lapalettedugoût.jpg" alt=""><figcaption class="name"><p>La palette du goût</p><button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
         
         <main class="plats">
             <!--Entrées plats desserts avec animations-->
