--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Ohmyfood</title>
-        <link type="text/css" rel="stylesheet" href="monprojet3bis/style.css">
+        <link type="text/css" rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/8e5ac735b3.js" crossorigin="anonymous"></script>
         <!-- logo et titre : police Shrikhand
             autre texte : police Roboto-->
@@ -25,7 +25,7 @@
             
         </header>
             <!--Figure du resto avec le nom-->
-            <figure class="photoresto"> <img src="IMG/ledélicedessens.jpg" alt=""><figcaption class="name">Le délice des sens<button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
+            <figure class="photoresto"> <img src="IMG/ledélicedessens.jpg" alt=""><figcaption class="name"><p>Le délice des sens</p><button class="heart"><i class="far fa-heart"></i></button></figcaption></figure>
         
         <main class="plats">
             <!--Entrées plats desserts avec animations-->
