améliorations et ajouts de fioritures indispensables

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -19,7 +19,7 @@
         <header class="restoheader">
             <!-- page d'accueil : gros logo
                 Autre page : ajouter une flèche pour retourner en arrière-->
-            <a class="back" href="index.html"><i class="fas fa-arrow-left"></i></a>
+            <a class="back" href="index.html"><div><i class="fas fa-arrow-left"></i></div></a>
             <a href="index.html" id="logo"><img src="IMG/ohmyfood.svg" alt=""></a>
 
             
