rectifications post-soutenance

--- a/alafrançaise.html
+++ b/alafrançaise.html
@@ -45,7 +45,7 @@
             <div class="contentbox menu third"><p class="texte"><strong>Millefeuille croustillant</strong></p><p class="texte">Myrtilles et pâte d'amande</p><p class="price">23€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <!--le bouton 'commander'-->
-            <button class="button" type="button">Commander</button>
+            <a href="" class="button">Commander</a>
         </main>
 
         <footer>
