--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -45,7 +45,7 @@
             <div class="contentbox menu third"><p class="texte"><strong>Mousse au chocolat</strong></p><p class="texte">Au piment d'Espelette et à la truffe noire</p><p class="price">23€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <!--le bouton 'commander'-->
-            <button class="button" type="button">Commander</button>
+            <a href="" class="button">Commander</a>
         </main>
 
         <footer>
