--- a/ledelicedessens.html
+++ b/ledelicedessens.html
@@ -46,7 +46,7 @@
             <div class="contentbox menu third"><p class="texte"><strong>Tiramisu</strong></p><p class="texte">À la noisette</p><p class="price">23€</p><a class="acheck"><i class="fas fa-check-circle check"></i></a></div>
 
             <!--le bouton 'commander'-->
-            <button class="button" type="button">Commander</button>
+            <a href="" class="button">Commander</a>
         </main>
 
         <footer>
